# RT_Vector

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile.dev  README.md  agent.py  chunkers.py  crypto.py  embeddings.py  llm.py  main.py  pyproject.toml
backend/api/v1/: agent.py  chat.py  chunk_preview.py  conversations.py  documents.py  ingest.py  settings.py
backend/db/: __init__.py  conversations.py  documents.py  pool.py  search.py  settings.py
backend/notebook_evaluation/: 01_pdf_downloader.ipynb  02_colab_docling.ipynb  03_colab_docling_result_to_vector.ipynb  04_upload_to_db.ipynb  05_evaluation.ipynb  06_load_evaluation.ipynb  README.md  chunking_detailed_results.csv  chunking_evaluation_results.csv  docker-compose.yaml
backend/notebook_evaluation/init_sql/: init.sql
backend/notebook_evaluation/json/: 2401.02564v2.json  2401.03305v2.json  2401.03345v2.json  2401.03776v8.json  2401.05657v5.json  2401.06740v2.json  2401.06959v2.json  2401.07294v4.json  2401.12638v7.json  2401.15478v2.json  2401.16412v4.json  2402.02272v2.json  2402.03637v2.json  2402.04429v3.json  2402.09444v3.json  2402.09721v6.json  2402.12350v3.json  2402.13385v2.json  2402.15828v4.json  2403.01421v2.json  2403.04433v3.json  2403.04635v2.json  2403.05412v2.json  2403.06613v3.json  2403.08753v2.json  2403.08977v2.json  2403.11010v3.json  2403.11030v3.json  2403.12117v2.json  2403.13015v2.json  2403.18677v2.json  2404.05659v3.json  2404.08757v2.json  2404.09796v2.json  2404.11221v4.json  2404.11929v3.json  2404.16880v3.json  (+225 more)
(+32 files in other folders)
